--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "crypto": "^1.0.1",
     "morgan": "^1.10.0",
     "object-sha": "^1.0.5",
-    "request": "^2.81.0"
+    "paillier-bigint": "^3.0.4",
+    "request": "^2.81.0",
+    "shamirs-secret-sharing": "^1.0.1"
   }
 }
